<resources>
    <string name="a11y_done_this_week">%1$d out of %2$d done</string>
    <string name="a11y_duration_preferred_times_concatenated">For %1$s, best time: %2$s</string>
    <string name="a11y_location_image">Location image</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_code_item_host">Host: %s</string>
    <string name="access_code_item_no_passcode">Join without passcode</string>
    <string name="access_code_item_participant">Participant: %s</string>
    <string name="access_code_picker_dialog_positive_button">Join</string>
    <string name="access_code_picker_dialog_title">Choose passcode</string>
    <string name="accessbility_suggestion_dropdown_closed">No suggestions available</string>
    <string name="accessbility_suggestion_dropdown_opened">Contact suggestions opened</string>
    <string name="accessibility_clear_search">Clear search</string>
    <string name="accessibility_compose">Create new event and more</string>
    <string name="accessibility_declined_event_prefix">Declined</string>
    <string name="accessibility_drawer_close">Hide Calendar List and Settings drawer</string>
    <string name="accessibility_drawer_closed_announce">Calendar List and Settings drawer closed</string>
    <string name="accessibility_drawer_open">Show Calendar List and Settings drawer</string>
    <string name="accessibility_drawer_opened_announce">Calendar List and Settings drawer opened</string>
    <string name="accessibility_event_open">Open Event</string>
    <string name="accessibility_find_a_time_filters_title">Filters</string>
    <string name="accessibility_find_a_time_list_title">Find a time suggestion page</string>
    <string name="accessibility_find_time_empty_list">"Everyone's busy. Change the timeframe or duration below to get better results"</string>
    <string name="accessibility_find_time_list_duration_label">Drop-down list duration: %s</string>
    <string name="accessibility_find_time_list_item">Time suggestion: %1$s, %2$s, %3$s</string>
    <string name="accessibility_find_time_list_item_more_icon">More button</string>
    <string name="accessibility_find_time_list_timeframe_label">Drop-down list timeframe: %s</string>
    <string name="accessibility_find_time_new_suggestion">New time suggestion created on %1$s, %2$s</string>
    <string name="accessibility_find_time_select_suggestion_button">Select suggestion</string>
    <string name="accessibility_find_time_show_more_button">Show more suggestions button</string>
    <string name="accessibility_find_time_slab_bar_format">%1$s, %2$s</string>
    <string name="accessibility_find_time_slab_bar_swipe_hint">Swipe left to move to next suggestion</string>
    <string name="accessibility_find_time_slab_bar_swipe_hint_rtl">Swipe right to move to next suggestion</string>
    <string name="accessibility_find_time_timeframe_duration_label">Selected filter value: %s</string>
    <string name="accessibility_hide_date_picker">Hide date picker</string>
    <string name="accessibility_navigation_icon">Back</string>
    <string name="accessibility_new_event">Create new event</string>
    <string name="accessibility_overflow">Overflow menu</string>
    <string name="accessibility_pick_end_date">End date: %s</string>
    <string name="accessibility_pick_end_time">End time: %s</string>
    <string name="accessibility_pick_start_date">Start date: %s</string>
    <string name="accessibility_pick_start_time">Start time: %s</string>
    <string name="accessibility_show_agenda_view">Open Schedule View</string>
    <string name="accessibility_show_date_picker">Show date picker</string>
    <string name="accessibility_show_day_view">Open Day View</string>
    <string name="accessibility_speeddial_cancel">Cancel button</string>
    <string name="accessibility_speeddial_event">Event button</string>
    <string name="accessibility_speeddial_groove">Goal button</string>
    <string name="accessibility_speeddial_reminder">Reminder button</string>
    <string name="accessibility_timely_chip_multi_day_count">%1$s (Day %2$d of %3$d)</string>
    <string name="account_picker_accessibility_title">Account picker</string>
    <string name="account_smartmail_unsupported">This Google account does not support automatically adding events from Gmail.</string>
    <string name="accounts">Accounts &amp; sync</string>
    <string name="acessibility_recurrence_choose_end_date_description">change end date</string>
    <string name="acessibility_selected_checkmark_description">Selected</string>
    <string name="acl_fixer_help_url">https://support.google.com/calendar/?p=add_attachments_android</string>
    <string name="action_defer">Defer</string>
    <string name="action_delete">Remove</string>
    <string name="action_label">Return</string>
    <string name="action_mark_as_done">Mark as done</string>
    <string name="action_mark_as_not_done">Mark as not done</string>
    <string name="action_view">View</string>
    <string name="activity_not_found">No application found to handle the %1$s action</string>
    <string name="activity_not_found_general">No application found to handle the action</string>
    <string name="add_additional_notification_label">Add another notification</string>
    <string name="add_automatically">Add events from Gmail</string>
    <string name="add_conference_link_description_label">Add video meeting link and dial-in details</string>
    <string name="add_conference_link_switch_label">Google Meet</string>
    <string name="add_guests_hint">Invite people</string>
    <string name="add_hangout_switch_label">Add Hangout</string>
    <string name="add_note_fragment_button_send" />
    <string name="add_note_sent" />
    <string name="add_note_title">Add note</string>
    <string name="add_note_title_without_proposed_time" />
    <string name="add_notification_label">Add a notification</string>
    <string name="add_to_calendar">add to calendar</string>
    <string name="address_intra_delimiter">", "</string>
    <string name="address_intra_separator">" "</string>
    <string name="agenda_today">TODAY, %1$s</string>
    <string name="agenda_tomorrow">TOMORROW, %1$s</string>
    <string name="agenda_view">Schedule</string>
    <string name="agenda_view_label">Schedule</string>
    <string name="agenda_yesterday">YESTERDAY, %1$s</string>
    <string name="airport_search">%s airport</string>
    <string name="all_day_description_prefix">All day:</string>
    <string name="all_day_reminder_time" formatted="false">%s before at %s</string>
    <string name="all_participants_can_attend">All participants can attend</string>
    <string name="analytics_action_all_calendars_hidden_dialog">all_calendars_hidden_dialog</string>
    <string name="analytics_action_assist">tap_task_assistance</string>
    <string name="analytics_action_calendar_permissions">calendar</string>
    <string name="analytics_action_call_permissions">call</string>
    <string name="analytics_action_category_selected">category_selected</string>
    <string name="analytics_action_conference_link_shown">conference_link_shown</string>
    <string name="analytics_action_conference_link_tapped">conference_link_tapped</string>
    <string name="describe_attachments_icon">Attachments</string>
    <string name="describe_groove_contract_icon">Your goal</string>
    <string name="describe_guests_icon">People list</string>
    <string name="describe_location_icon">Location</string>
    <string name="describe_notification_icon">Calendar Notifications</string>
    <string name="duration_spinner_title">Duration</string>
    <string name="edit_add_attachment_hint">Add attachment</string>
    <string name="edit_add_more_attachments_hint">Add another attachment</string>
    <string name="edit_location_hint">Add location</string>
    <string name="every_day">Every day</string>
    <string name="find_a_time_button_label">FIND A TIME</string>
    <string name="frequency_spinner_title">Sessions a week</string>
    <string name="groove_duration_15_mins">15 minutes</string>
    <string name="groove_duration_1_hour">1 hour</string>
    <string name="groove_duration_2_hours">2 hours</string>
    <string name="groove_duration_30_mins">30 minutes</string>
    <string name="groove_duration_title">For how long?</string>
    <string name="groove_frequency_five_times_per_week">5 times a week</string>
    <string name="groove_frequency_one_time_per_week">Once a week</string>
    <string name="groove_frequency_three_times_per_week">3 times a week</string>
    <string name="groove_frequency_title">How often?</string>
    <string name="groove_frequency_two_times_per_week">Twice a week</string>
    <string name="groove_smart_notifications_label">Smart notifications</string>
    <string name="groove_your_goal">Your goal</string>
    <string name="preference_edit_color_header">Color</string>
    <string name="preference_edit_notifications_disclaimer">You can change default notifications by going to the individual calendar, for example Events.</string>
    <string name="preference_edit_notifications_header">Notifications</string>
    <string name="preference_edit_notify">Notify on this device</string>
    <string name="preference_edit_ringtone_header">Tone</string>
    <string name="preference_edit_use_standard">Use standard tone</string>
    <string name="preference_edit_vibrate">Vibrate</string>
    <string name="preferences_edit_visibility">Visibility</string>
    <string name="response_maybe">Maybe</string>
    <string name="response_no">No</string>
    <string name="response_prompt">Going?</string>
    <string name="response_yes">Yes</string>
    <string name="smart_notifications_description">Before and after your session to help you prepare and track progress</string>
</resources>