<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/duration_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/groove_duration_title" style="@style/GrooveCreationWizardTitle" />
    <Button android:id="@id/duration_15_mins" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/groove_duration_15_mins" style="@style/GrooveCreationWizardButton" />
    <Button android:id="@id/duration_30_mins" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/groove_duration_30_mins" style="@style/GrooveCreationWizardButton" />
    <Button android:id="@id/duration_1_hour" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/groove_duration_1_hour" style="@style/GrooveCreationWizardButton" />
    <Button android:id="@id/duration_2_hours" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/groove_duration_2_hours" style="@style/GrooveCreationWizardButton" />
</merge>