<?xml version="1.0" encoding="utf-8"?>
<com.android.calendar.timely.settings.segments.NotificationPrefsEditSegment android:importantForAccessibility="no" app:rowCount="8" app:columnCount="1" style="@style/EditSegmentLayout"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/preference_edit_notifications_header" app:layout_row="0" app:layout_column="0" style="@style/Preference.GroupHeader" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_row="1" app:layout_column="0" app:layout_gravity="fill_horizontal" style="@style/Preference.Edit.Label">
        <TextView android:textColor="@color/preference_label" android:id="@id/notify_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/preference_edit_notify" android:layout_weight="1.0" />
        <Switch android:id="@id/notify_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:id="@id/use_standard_row" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_row="2" app:layout_column="0" app:layout_gravity="fill_horizontal" style="@style/Preference.Edit.Label">
        <TextView android:textColor="@color/preference_label" android:id="@id/use_standard_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/preference_edit_use_standard" android:layout_weight="1.0" />
        <Switch android:id="@id/use_standard_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView android:id="@id/ringtone_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/preference_edit_ringtone_header" app:layout_row="3" app:layout_column="0" style="@style/Preference.Edit.Label" />
    <TextView android:gravity="fill" android:id="@id/ringtone_button" android:paddingLeft="24.0dip" android:paddingBottom="5.0dip" app:layout_row="4" app:layout_column="0" app:layout_gravity="fill" style="@style/Preference.Edit.Value" />
    <LinearLayout android:id="@id/vibrate_row" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_row="5" app:layout_column="0" app:layout_gravity="fill_horizontal" style="@style/Preference.Edit.Label">
        <TextView android:textColor="@color/preference_label" android:id="@id/vibrate_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/preference_edit_vibrate" android:layout_weight="1.0" />
        <Switch android:id="@id/vibrate_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView android:textSize="@dimen/subhead_text_size" android:textColor="@color/setting_gray" android:layout_gravity="center_vertical" android:paddingTop="@dimen/subhead_top_margin" android:paddingBottom="@dimen/subhead_bottom_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/preference_edit_notifications_disclaimer" android:fontFamily="sans-serif-light" android:paddingStart="@dimen/home_icon_padding" android:paddingEnd="@dimen/home_icon_padding" app:layout_row="6" app:layout_column="0" />
    <View app:layout_row="7" app:layout_column="0" app:layout_gravity="fill_horizontal" style="@style/Edit.Divider"
      xmlns:android="http://schemas.android.com/apk/res/android" />
</com.android.calendar.timely.settings.segments.NotificationPrefsEditSegment>