<?xml version="1.0" encoding="utf-8"?>
<com.android.calendar.groove.GrooveNotificationsEditSegment android:focusable="false" android:descendantFocusability="afterDescendants" android:rowCount="4" android:columnCount="3" style="@style/EditSegmentLayout"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:src="@drawable/ic_notification" android:contentDescription="@string/describe_notification_icon" app:layout_row="0" app:layout_rowSpan="2" app:layout_column="0" style="@style/Edit.Icon" />
    <LinearLayout android:orientation="vertical" android:id="@id/notification_layout" android:focusable="false" android:descendantFocusability="afterDescendants" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_row="0" app:layout_column="1" app:layout_columnSpan="2" app:layout_gravity="fill_horizontal|center" />
    <TextView android:gravity="center_vertical" android:id="@id/add_notification_button" android:background="?android:selectableItemBackground" android:focusable="true" android:layout_width="0.0dip" android:layout_height="@dimen/edit_segment_tile_height" android:text="@string/add_notification_label" android:paddingEnd="@dimen/edit_segment_horizontal_padding" app:layout_row="1" app:layout_column="1" app:layout_columnSpan="2" app:layout_gravity="fill" style="@style/Edit.Text.Light" />
    <TextView android:paddingTop="8.0dip" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/groove_smart_notifications_label" android:paddingEnd="@dimen/edit_segment_horizontal_padding" app:layout_row="2" app:layout_column="1" app:layout_gravity="fill_horizontal" style="@style/Edit.Text" />
    <TextView android:textSize="@dimen/subhead_text_size" android:textColor="@color/setting_gray" android:paddingBottom="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/smart_notifications_description" app:layout_row="3" app:layout_column="1" app:layout_gravity="fill_horizontal" />
    <Switch android:gravity="center_vertical" android:id="@id/switch_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/edit_segment_horizontal_padding" android:layout_marginRight="@dimen/edit_segment_horizontal_padding" app:layout_row="2" app:layout_rowSpan="2" app:layout_column="2" app:layout_gravity="fill_vertical" />
</com.android.calendar.groove.GrooveNotificationsEditSegment>