<?xml version="1.0" encoding="utf-8"?>
<com.google.android.calendar.event.edit.segment.AttachmentsEditSegment android:rowCount="2" android:columnCount="3" style="@style/EditSegmentLayout"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/edit_attachments_icon" android:src="@drawable/ic_attach" android:contentDescription="@string/describe_attachments_icon" app:layout_row="0" app:layout_column="0" style="@style/Edit.Icon" />
    <TextView android:gravity="center_vertical" android:id="@id/add_attachment_text" android:background="?android:selectableItemBackground" android:paddingLeft="0.0dip" android:paddingRight="@dimen/edit_segment_horizontal_padding" android:focusable="true" android:layout_width="0.0dip" android:layout_height="@dimen/edit_segment_tile_height" android:text="@string/edit_add_attachment_hint" android:paddingStart="0.0dip" android:paddingEnd="@dimen/edit_segment_horizontal_padding" app:layout_row="0" app:layout_column="1" app:layout_gravity="fill" style="@style/Edit.Text.Light" />
    <com.google.android.libraries.view.horizontalcarousel.HorizontalCarousel android:id="@id/attachment_holder" android:layout_width="0.0dip" android:layout_height="@dimen/attachment_chip_height" android:layout_marginTop="@dimen/attachment_top_margin" app:layout_row="0" app:layout_column="1" app:layout_columnSpan="1" app:layout_gravity="fill_horizontal" app:layout_spaceStart="@dimen/carousel_space_start" app:layout_spaceEnd="@dimen/carousel_space_end" app:layout_spaceBetween="@dimen/carousel_space_between" app:layout_maxItemWidthHint="@dimen/carousel_chip_max_width" />
    <TextView android:gravity="center_vertical" android:id="@id/add_more_attachments_text" android:background="?android:selectableItemBackground" android:paddingLeft="0.0dip" android:paddingRight="@dimen/edit_segment_horizontal_padding" android:focusable="true" android:layout_width="0.0dip" android:layout_height="@dimen/edit_segment_tile_height" android:text="@string/edit_add_more_attachments_hint" android:paddingStart="0.0dip" android:paddingEnd="@dimen/edit_segment_horizontal_padding" app:layout_row="1" app:layout_column="1" app:layout_gravity="fill" style="@style/Edit.Text.Light" />
</com.google.android.calendar.event.edit.segment.AttachmentsEditSegment>